...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/getLoc"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="112dp"
        android:drawableStart="@android:drawable/ic_menu_mylocation"
        android:onClick="getLocation"
        app:layout_constraintBottom_toTopOf="@+id/locationB"
        app:layout_constraintStart_toStartOf="@+id/locationB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <EditText
        android:id="@+id/locationA"
        android:layout_width="272dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/locALabel"
        android:textColor="#2eb524"
        android:inputType="textPostalAddress"
...
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationA"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/gotoMap"
        android:layout_width="334dp"
        android:layout_height="63dp"
        android:onClick="gotoMap"
        android:text="@string/seeOnMapLabel"
        android:textSize="18sp"
        android:textStyle="bold"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />


    <CheckBox
        android:id="@+id/checkBoxRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="35dp"
        android:text="@string/restaurantLabel"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxGasStation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationB" />

    <CheckBox
        android:id="@+id/checkBoxPark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="35dp"
        android:text="@string/parkLabel"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxHotel"
...
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:text="@string/labelA"
        android:textColor="#38e62c"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gotoMap"
        app:layout_constraintEnd_toStartOf="@+id/slider"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
